fixes on horizontal overflowing

--- a/globals.css
+++ b/globals.css
@@ -19,6 +19,8 @@
 
 html {
   scroll-behavior: smooth;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -26,6 +28,8 @@ body {
   background-color: var(--primary);
   color: var(--on-primary);
   max-width: 1600px;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 a {
